fix(list-panel): too long descriptions don't push buttons anymore
resolves #1429

--- a/apps/client/src/app/modules/list/list-panel/list-panel.component.less
+++ b/apps/client/src/app/modules/list/list-panel/list-panel.component.less
@@ -24,6 +24,11 @@
     display: flex;
     flex: 1 1 auto;
   }
+
+  .description {
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
 
 .odd {
